[package]
name = "xous-tools"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
default-run = "create-image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.7.0"
clap = "2.33"
csv = "1.1" # Support reading csr.csv
log = "0"

[[bin]]
name = "make-tags"

[[bin]]
name = "read-tags"

[[bin]]
name = "check-elf"

[[bin]]
name = "create-image"
