[package]
name = "xous-tools"
version = "0.1.0"
authors = ["Sean Cross <sean@xobs.io>"]
edition = "2018"
default-run = "create-image"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmas-elf = "0.7.0"
clap = "2.33"
crc = "1.8.1"
csv = "1.1"
log = "0"
env_logger = "0.7"

[[bin]]
name = "make-tags"

[[bin]]
name = "read-tags"

[[bin]]
name = "copy-object"

[[bin]]
name = "create-image"
